--- a/test8.html
+++ b/test8.html
@@ -158,7 +158,7 @@
         const currentQNum = 8;         // 当前题号
         const nextPageName = "test9.html"; // 下一题文件名
         const isPhishingAnswer = true; // 正确答案。true:此内容是钓鱼
-        const analysis = "解析：任何官方网站（即使是像 Z-Library 这样频繁更换域名的网站），在通知用户时，通常会使用其当前或已知的官方域名后缀。发件域名 <span style='font-family:monospace;'>security@zju.edu.cn</span>看上去像官方域名，但它是一个第三方注册的域名。攻击者注册这个域名就是为了模仿 Z-Library 的名字，但它并不代表 Z-Library 的官方通信渠道。真正的 Z-Library 官方通知通常会使用其最新的、广为流传的主域名。其次，“请点击这里直接访问Z图书馆。”这种措辞非常危险，因为“这里”隐藏了真实的、完整的链接地址。最后，邮件内容充满了非正式的、带有情感色彩的宣传语调，而不是系统通知的严谨性。";
+        const analysis = "解析：任何官方网站（即使是像 Z-Library 这样频繁更换域名的网站），在通知用户时，通常会使用其当前或已知的官方域名后缀。发件域名 <span style='font-family:monospace;'>noreply@z-lib.ai</span>看上去像官方域名，但它是一个第三方注册的域名。攻击者注册这个域名就是为了模仿 Z-Library 的名字，但它并不代表 Z-Library 的官方通信渠道。真正的 Z-Library 官方通知通常会使用其最新的、广为流传的主域名。其次，“请点击这里直接访问Z图书馆。”这种措辞非常危险，因为“这里”隐藏了真实的、完整的链接地址。最后，邮件内容充满了非正式的、带有情感色彩的宣传语调，而不是系统通知的严谨性。";
         // ==========================================
 
         // 如果是第一题，初始化统计数据
@@ -220,3 +220,4 @@
     </script>
 </body>
 </html>
+
